# Path-Tracer

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  pathtracer.sln  pathtracer.vcxproj  pathtracer.vcxproj.filters  smpl_spec_r0.000000_g0.250000_b1.000000.csv  smpl_spec_r0.000000_g1.000000_b0.250000.csv  smpl_spec_r0.000000_g1.000000_b1.000000.csv  smpl_spec_r0.500000_g0.000000_b1.000000.csv  smpl_spec_r0.500000_g1.000000_b0.000000.csv  smpl_spec_r1.000000_g0.000000_b0.000000.csv  smpl_spec_r1.000000_g0.000000_b0.750000.csv  smpl_spec_r1.000000_g0.750000_b0.000000.csv  test_snippet.vcxproj  test_snippet.vcxproj.filters  to_do_list.txt
data/: Pope_absorp.txt  Pope_absorp_coefs.csv  Pope_absorp_coefs.xlsx  gt1290.csv  spike700.csv  uniform1.8.csv
src/: aabbox.h  attenuation.cpp  attenuation.h  attenuation_test.cpp  camera.cpp  camera.h  cie_xyz.cpp  cie_xyz.h  cie_xyz_test.cpp  color.cpp  color.h  common.cpp  common.h  config.h  geometry.cpp  geometry.h  intersection.h  light.cpp  light.h  main.cpp  material.cpp  material.h  object.cpp  object.h  object_intersection.h  objects.cpp  objects.h  observer.cpp  observer.h  quantum_efficiency.cpp  quantum_efficiency.h  quantum_efficiency_test.cpp  ray.h  renderer.cpp  renderer.h  scene.cpp  scene.h  spect_attenuation_test.cpp  spectrum.cpp  spectrum.h  (+8 more)
